--- a/ApiContactos/ApiContactos.csproj
+++ b/ApiContactos/ApiContactos.csproj
@@ -105,6 +105,12 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepositorioAdapter\RepositorioAdapter.csproj">
+      <Project>{c03fc542-ea55-44ba-8635-23a6ce53d3d4}</Project>
+      <Name>RepositorioAdapter</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
