--- a/ApiContactos/ApiContactos.csproj
+++ b/ApiContactos/ApiContactos.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Adapters\UsuarioAdapter.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CameraController.cs" />
     <Compile Include="Controllers\ContactoController.cs" />
     <Compile Include="Controllers\MensajeController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
